src/assets/less/local.less
/* ... */
/* Dark Mode */
@media only screen and (min-width: 0rem) {
    body.dark-mode {
        #services-468 {
            .cs-item {
                background-color: var(--accent);
            }

            .cs-icon {
                /* makes icons turn grey and brighten them up */
                filter: grayscale(1) brightness(1000%);
            }

            .cs-h3 {
                color: var(--bodyTextColorWhite);
            }
        }
    }
}
/*-- -------------------------- -->
<---      Contact Strip         -->
<--- -------------------------- -*/

/* Mobile - 360px */
@media only screen and (min-width: 0rem) {
    #contact-strip-1111 {
        padding: var(--sectionPadding);
        background-color: var(--primary);
        position: relative;
        z-index: 1;

        .cs-stat-group {
            width: 100%;
            margin: auto;
            padding: 0;
            display: flex;
            justify-content: center;
            align-items: center;
            flex-direction: column;
            /* reduced to 24px at tablet */
            gap: (40/16rem);
        }

        .cs-item {
            list-style: none;
            width: (290/16rem);
            margin: 0;
            padding: 0;
            display: flex;
            justify-content: flex-start;
            align-items: center;

            &:hover {
                .cs-picture {
                    background-color: #fff;
                    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
                    transform: scale(1.1);
                }
            }
        }

        .cs-picture {
            /* 48px - 80px */
            width: clamp(3rem, 5.7vw, 5rem);
            height: clamp(3rem, 5.7vw, 5rem);
            /* 12px - 20px */
            margin-right: clamp(0.75rem, 1.5vw, 1.25rem);
            border-radius: 50%;
            border: 1px solid var(--secondary);
            display: flex;
            justify-content: center;
            align-items: center;
            /* prevents flexbox from squishing it */
            flex: none;
            transition:
                background-color 0.3s,
                box-shadow 0.3s,
                transform 0.6s;
        }

        .cs-flex-group {
            display: flex;
            justify-content: center;
            align-items: flex-start;
            flex-direction: column;
        }

        .cs-icon {
            /* 20px - 40px */
            width: clamp(1.25rem, 2.5vw, 2.5rem);
            height: auto;
        }

        .cs-header {
            font-size: (20/16rem);
            color: var(--bodyTextColorBlack);
            font-weight: 900;
            line-height: 1.2em;
            margin: 0;
            margin-bottom: (12/16rem);
            display: block;
        }

        .cs-address,
        .cs-link {
            /* 14px - 16px */
            font-size: clamp(0.875rem, 1.5vw, 1rem);
            line-height: 1.5em;
            text-decoration: none;
            color: var(--bodyTextColorBlack);
            display: block;
        }

        .cs-link {
            &:hover {
                text-decoration: underline;
            }
        }

        .cs-background {
            width: 100%;
            height: 100%;
            display: block;
            position: absolute;
            top: 0;
            left: 0;
            z-index: -1;

            &:before {
                /* background color overlay */
                content: "";
                position: absolute;
                display: block;
                height: 100%;
                width: 100%;
                background: #1a1a1a;
                opacity: 0.0;
                top: 0;
                left: 0;
                z-index: 1;
            }

            img {
                position: absolute;
                top: 0;
                left: 0;
                height: 100%;
                width: 100%;
                /* Makes img tag act as a background image */
                object-fit: cover;
            }
        }
    }
}

/* Tablet - 768px */
@media only screen and (min-width: 48rem) {
    #contact-strip-1111 {
        .cs-stat-group {
            max-width: (1280/16rem);
            flex-direction: row;
            justify-content: space-between;
            gap: (24/16rem);
        }

        .cs-item {
            width: auto;
        }
    }
}

                                
                                                                

                                

                                

